# lpd8mk2

./: README.md  pyproject.toml
docs/: sysex_captures.md
lpd8mk2/: __init__.py  __main__.py  any.py  constants.py  util.py
lpd8mk2/config/: __init__.py  preset.py  program.py  setting.py
lpd8mk2/hex/: __init__.py  hex.py  util.py
lpd8mk2/midi/: __init__.py  io.py  lpd8mk2.py  setting.py
lpd8mk2/presets/: program_1.json  program_2.json  program_3.json  program_4.json
lpd8mk2/rgb/: rgb.py
