[tool.poetry]
name = "lpd8mk2"
version = "0.1.0"
description = ""
authors = ["Stephen Martin <stephensrmmartin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# mido = "^1.3.2"
# rtmidi = "^2.5.0"
mido = {extras = ["ports-rtmidi"], version = "^1.3.2"}

[tool.poetry.extras]
mido = ["ports-rtmidi"]


[tool.poetry.group.dev.dependencies]
jedi = "^0.19.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
