[project]
name = "lpd8mk2"
version = "0.2.1"
description = "Library and CLI tool for configuring the Akai LPD8 Mk2 Midi Controller"
authors = [{name = "Stephen Martin", email = "stephensrmmartin@gmail.com"}]
readme = "README.md"
requires-python = "^3.12"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
mido = {extras = ["ports-rtmidi"], version = "^1.3"}

[project.scripts]
lpd8mk2 = "lpd8mk2.__main__:main"

[tool.poetry.group.dev.dependencies]
jedi = "^0.19.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
